examples/v0.6/errors/for_range_non_numeric.nova
for i in "A".."Z" {

}

//Expected: Range bounds must be numeric.